--- a/main.html
+++ b/main.html
@@ -8,6 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>TRANSFORMER</header>
+	<nav>
+		<a id="nav-actor" href="actor">
+		ACTORS
+		</a>
+		<a id="nav-quote" href="quote">
+		QUOTES
+		</a>
+	</nav>
+	<summary>
+		robots are fighting
+	</summary>
+	<section id="actor">
+		this is section1
+	</section>
+	<section id="quote">
+		this is section2
+	</section>
+	<aside>
+		imdb rating=9.6
+		release date=25-06-26
+	</aside>
+	<footer>
+		Produced By:<b>Aravind</b>
+	</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
