--- a/main.html
+++ b/main.html
@@ -8,30 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<header>TRANSFORMER</header>
-	<nav>
-		<a id="nav-actor" href="actor">
-		ACTORS
-		</a>
-		<a id="nav-quote" href="quote">
-		QUOTES
-		</a>
-	</nav>
-	<summary>
-		robots are fighting
-	</summary>
+	 <header>
+    <h1>My Favorite Movie</h1>
+  </header>
+  <nav>
+    <a href="#actor" id="nav-actor">Actors</a>
+    <a href="#quote" id="nav-quote">Quotes</a>
+  </nav>
+
+ 	<summary>Epcot Center</summary>
 	<section id="actor">
-		this is section1
+		<p>mood nahi h</p>
 	</section>
 	<section id="quote">
-		this is section2
+		<p> sad life</p>
 	</section>
 	<aside>
-		imdb rating=9.6
-		release date=25-06-26
+		<p>rating:10.0</p>
+		<p>release date:august</p>
 	</aside>
 	<footer>
-		Produced By:<b>Aravind</b>
+		Produced by: Aravind
 	</footer>
     <script type="text/javascript" src="./script.js">
 </script>
